--- a/style2.css
+++ b/style2.css
@@ -149,7 +149,7 @@ p {
   box-shadow: 0 0 20px rgba(0,0,0,0.1);
 }
 .service-detail-title {
-    font-size: 2.5rem;
+  font-size: 28px;
     color: #333;
     margin: 10px;
 }
